# minimal-test

./: .env.example  .gitignore  .pre-commit-config.yaml  .roomodes  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  KAIROS_BCP_REWRITE_PLAN.md  README copy.md  README.md  alembic.ini  code.md  docker-compose.yml  mission_map.json  package-lock.json  package.json  pyproject.toml  spec_01_especificacion_kairos_bcp.md  spec_phase1.md  tree_template.hbs
.roo/: README.md  mcp.json  task-state.json
.roo/architect_templates/: orchestrator_task_checklist_TEMPLATE.md  orchestrator_task_definition_TEMPLATE.md
.roo/architect_work/TEST_DATA_GENERATION/: checklist_orchestrator_task_for_TEST_DATA_GENERATION.md
.roo/architect_work/frontend_pkm/: checklist_orchestrator_task_for_frontend_pkm.md
.roo/hooks/: archive_mission_prompt.hook.md  create_agent_mode.hook.md  generate_agent_identity.hook.md  mission_map_schema.hook.md
.roo/rules-architect-task/: rules.md
.roo/rules-code/: project-profile.md  rules.md
.roo/rules-keymaker/: rules.md
.roo/rules-operator/: rules.md
.roo/rules-orchestrator/: rules.md
.roo/rules-pseudocoder/: rules.md
.roo/rules-think/: rules.md
.roo/scoring/: complexity_matrix.md
.roo/task/: mcp_code_reasoning_interaction.md
.roo/tasks-prompts/: orchestrator_task_def_TEST_DATA_GENERATION.md  orchestrator_task_def_frontend_pkm.md
.roo/tasks/PKM_FRONTEND_001/: 00_task_specific_directives_PKM_FRONTEND_001.md  COMPLETED_SUMMARY.md  context7_checklist.md  development_guide.md  task-state.json  to-do.md  to-do_coder.md
.roo/tasks/PKM_TEST_DATA_001/: development_guide.md  task-state.json  to-do.md  to-do_coder.md
.roo/tasks/TASK_KEYWORD_CRUDL_001/: development_guide.md  to-do.md
.roo/tasks/TASK_PRECOMMIT_FIX_001/: development_guide.md  pre-commit-errors.md  task-state.json  to-do.md
.roo/tasks/TASK_PROJECT_CRUDL_001/: development_guide.md  to-do.md
.roo/tasks/TASK_SOURCE_TESTS_001/: development_guide.md  task-state.json  task_specific_coding_tips.md  to-do.md  to-do_coder.md
.roo/tasks/TASK_TEST_001/: development_guide.md  to-do.md
.roo/tasks/TASK_TEST_002/: development_guide.md  to-do.md
.roo/templates/: 01_project_profile_and_stack.md  code_guidelines.md  custom-instructions-for-all-modes.md  define-task-template.md  detailed-mode-creation-guide.md  enhance-prompt-template.md  general_guidelines.md  orchestration_template.md  rulesV2.md  rules_orch_old.md  rulesv2.2.md  standard-task-template.md  task-test-source.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/components/forms/: ProjectForm.tsx
frontend/src/components/pkm/: TreeView.tsx
frontend/src/types/: api.ts  auth.ts  index.ts  keyword.ts  note.ts  project.ts  source.ts  user.ts
src/pkm_app/: logging_config.py  main.py
src/pkm_app/core/: README.md
src/pkm_app/core/application/: README.md
src/pkm_app/core/application/dtos/: __init__.py  keyword_dto.py  note_dto.py  note_link_dto.py  project_dto.py  source_dto.py  user_profile_dto.py
src/pkm_app/core/application/interfaces/: __init__.py  keyword_interface.py  note_interface.py  note_link_interface.py  project_interface.py  source_interface.py  unit_of_work_interface.py  user_profile_interface.py
src/pkm_app/core/application/use_cases/keyword/: __init__.py  create_keyword_use_case.py  delete_keyword_use_case.py  get_keyword_use_case.py  list_keywords_use_case.py  update_keyword_use_case.py
src/pkm_app/core/domain/: README.md  errors.py
src/pkm_app/core/domain/entities/: __init__.py  entity.py  keyword.py  note.py  note_link.py  project.py  source.py  tag.py  user_profile.py
src/pkm_app/infrastructure/: README.md
src/pkm_app/infrastructure/config/: settings.py
src/pkm_app/infrastructure/persistence/: README.md
src/pkm_app/infrastructure/persistence/migrations/: README  env.py
src/pkm_app/infrastructure/persistence/schema/: seed.sql  seed_old.sql
src/pkm_app/infrastructure/persistence/sqlalchemy/: database.py  unit_of_work.py
src/pkm_app/infrastructure/web/: README.md
src/pkm_app/infrastructure/web/streamlit_ui/: app.py
src/pkm_app/tests/: README.md  TEST_DATA_README.md  conftest.py
src/pkm_app/tests/data_generation/: README.MD  __init__.py  generate_test_data.py  keywords_data.py  note_links_data.py  notes_data.py  projects_data.py  sources_data.py  sql_generator.py  users_data.py
(+106 files in other folders)
